<resources>
    <string name="app_name">FireFly</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Ether password or email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to search -->
    <string name="_5_km">5 km</string>
    <string name="_0_km">0 km</string>
    <string name="max_price">Max Price</string>
    <string name="min_price">Min Price</string>
    <string name="free_text_search">Title, Address or part of Description</string>
    <string name="free_text_Title">Title</string>
    <string name="free_text_Address">Address</string>
    <string name="free_text_Desc">Description</string>
    <string name="free_text_Price">Price from 0.0 to 5.0</string>
    <string name="start">Start</string>
    <string name="str_search">Search</string>
    <string name="add">Add</string>

    <!-- Strings related to results -->
    <string name="btn_event">Title</string>
    <string name="reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gmaps">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_event">New Event</string>
    <string name="update_event">Update Event</string>
    <string name="btn_Update">Update</string>
</resources>
