<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="igor.firefly.UpdateEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="5dp"
        android:paddingStart="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_event"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/free_text_Title"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/free_text_Address"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/free_text_Desc"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/update_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/free_text_Price"
                android:inputType="number|numberDecimal"
                android:numeric="integer|decimal"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Update"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_Update" />

            <Button
                android:id="@+id/btn_Reset"
                style="@android:style/Widget.DeviceDefault.Light.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>